--- a/rc-task/src/App.css
+++ b/rc-task/src/App.css
@@ -2,25 +2,34 @@
   text-align: center;
 }
 
+.leaflet-container {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  height: 80px;
+}
+
+.navbar {
+  position: absolute;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #222;
+  height: 150px;
+  padding: 20px;
+  color: black;
 }
 
-.App-link {
-  color: #61dafb;
+.App-title {
+  font-size: 1.5em;
+}
+
+.App-intro {
+  font-size: large;
 }
 
 @keyframes App-logo-spin {
